--- a/files/assets/css/notifications.css
+++ b/files/assets/css/notifications.css
@@ -1,7 +1,3 @@
 .comment {
 	margin-top: 0.3rem;
 }
-
-.resizable {
-	height: 30vh !important;
-}
